fix mapbox z-index issue

--- a/src/styles/components/contacts.scss
+++ b/src/styles/components/contacts.scss
@@ -136,5 +136,6 @@
   &__map {
     height: 100%;
     width: 100%;
+    z-index: 0;
   }
 }
